# Git-Github-Commit-lazy

./: .env  .gitignore  Cargo.toml
.config/: user.json
src/: app.rs  config.rs  core.rs  github.rs  log.rs  main.rs  menu.rs
src/core/: cmd_command.rs  log_global.rs  melanjutkan.rs  new.rs  process.rs  utils.rs  watch_proces.rs
src/github/: auth.rs  client.rs  github.rs
src/menu/: lanjut.rs  project_baru.rs
