[package]
name = "asisten_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rfd = "0.12"
sysinfo = "=0.33.1"
nix = "0.29.0"
clap = "4.5.28"
serde = { version = "1.0" , features = ["derive"] }
serde_json = "1.0.138"
chrono = "0.4.39"
lazy_static = "1.5.0"
ureq = "2.9.1"
colored = "2"
once_cell = "1.19"
octocrab = "0.44.1"
anyhow = "1.0.98"
dotenv = "0.15.0"
dirs = "6.0.0"
tokio = {version = "1.47.1", features = ["full"]}
